Test/dafny0/GhostAllocations-Resolution.dfy.expect
GhostAllocations-Resolution.dfy(17,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(39,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(47,22): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(55,20): Error: the result of a ghost constructor can only be assigned to a ghost variable
GhostAllocations-Resolution.dfy(56,20): Error: only ghost methods can be called from this context
GhostAllocations-Resolution.dfy(62,20): Error: only ghost methods can be called from this context
GhostAllocations-Resolution.dfy(72,23): Error: the result of a ghost constructor can only be assigned to a ghost variable
GhostAllocations-Resolution.dfy(75,26): Error: the result of a ghost constructor can only be assigned to a ghost variable
GhostAllocations-Resolution.dfy(78,22): Error: the result of a ghost constructor can only be assigned to a ghost variable
GhostAllocations-Resolution.dfy(90,17): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(99,22): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(111,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(115,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(125,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(127,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(129,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(143,6): Error: LHS of assignment must denote a mutable field
GhostAllocations-Resolution.dfy(144,6): Error: LHS of assignment must denote a mutable field
GhostAllocations-Resolution.dfy(146,6): Error: LHS of assignment must denote a mutable field
GhostAllocations-Resolution.dfy(147,6): Error: LHS of assignment must denote a mutable field
GhostAllocations-Resolution.dfy(168,16): Error: only ghost methods can be called from this context
GhostAllocations-Resolution.dfy(173,8): Error: assignment to non-ghost field is not allowed in this context (because this is a ghost constructor)
GhostAllocations-Resolution.dfy(175,14): Error: only ghost methods can be called from this context
GhostAllocations-Resolution.dfy(209,10): Error: assignment to non-ghost field is not allowed in this context (because this is a ghost constructor)
GhostAllocations-Resolution.dfy(210,6): Error: print statement is not allowed in this context (because this is a ghost method or because the statement is guarded by a specification-only expression)
GhostAllocations-Resolution.dfy(212,8): Error: assignment to non-ghost field is not allowed in this context (because this is a ghost constructor)
GhostAllocations-Resolution.dfy(213,6): Error: print statement is not allowed in this context (because this is a ghost method or because the statement is guarded by a specification-only expression)
GhostAllocations-Resolution.dfy(221,22): Error: a hint is not allowed to use 'new'
GhostAllocations-Resolution.dfy(222,22): Error: a hint is not allowed to use 'new'
GhostAllocations-Resolution.dfy(227,18): Error: an assert-by body is not allowed to use 'new'
GhostAllocations-Resolution.dfy(228,18): Error: an assert-by body is not allowed to use 'new'
GhostAllocations-Resolution.dfy(247,11): Error: assignment to non-ghost field is not allowed in this context (because this is a ghost method)
GhostAllocations-Resolution.dfy(258,11): Error: ghost variables are allowed only in specification contexts
GhostAllocations-Resolution.dfy(276,13): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(277,13): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(281,15): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(281,25): Error: only ghost methods can be called from this context
GhostAllocations-Resolution.dfy(282,15): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(286,13): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(287,13): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(291,13): Error: 'new' is not allowed in lemma contexts
GhostAllocations-Resolution.dfy(295,13): Error: 'new' is not allowed in lemma contexts
42 resolution/type errors detected in GhostAllocations-Resolution.dfy
